chore: use yml `build` props correctly

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,8 @@
+build :
+  description : '@project.description@'
+  relative-path : ''
+  version : '@project.version@'
+
 spring :
   application :
     name : basics-amqp-consuming-hello
