--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 # This configuration is intended for development purpose
-version: '3.8'
-services:
+version : '3.8'
+services :
   rabbitmq :
     container_name : basics-amqp-dev-consuming-hello-rabbitmq
     image : rabbitmq:3.8-management-alpine
@@ -13,3 +13,33 @@ services:
       - '5672:5672'
       # HTTP management UI
       - '15672:15672'
+  prometheus :
+    container_name : basics-amqp-dev-consuming-hello-prometheus
+    image : prom/prometheus:v2.32.1
+    volumes :
+      - ./docker/prometheus/:/etc/prometheus/
+    command :
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    # If you want to expose these ports outside your dev PC,
+    # remove the "127.0.0.1:" prefix
+    ports :
+      - 127.0.0.1:9090:9090
+    # On MacOS, remove next line and replace localhost by host.docker.internal in docker/prometheus/prometheus.yml and
+    # docker/grafana/provisioning/datasources/datasource.yml
+    network_mode : 'host' # to test locally running service
+  grafana :
+    container_name : basics-amqp-dev-consuming-hello-grafana
+    image : grafana/grafana:8.3.3
+    volumes :
+      - ./docker/grafana/provisioning/:/etc/grafana/provisioning/
+    environment :
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+    # If you want to expose these ports outside your dev PC,
+    # remove the "127.0.0.1:" prefix
+    ports :
+      - 127.0.0.1:3000:3000
+    # On MacOS, remove next line and replace localhost by host.docker.internal in docker/prometheus/prometheus.yml and
+    # docker/grafana/provisioning/datasources/datasource.yml
+    network_mode : 'host' # to test locally running service
