--- a/.drone.yml
+++ b/.drone.yml
@@ -13,11 +13,11 @@ trigger :
 volumes :
   - name : m2cache
     host :
-      path : /volume1/m2cache
+      path : /app/.m2
 steps :
 
   - name : build
-    image : docker-registry.ujar.org/ujar/maven:3-openjdk-17-slim
+    image : docker-registry.c2a2.com/ujar/maven:3-openjdk-17-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -47,7 +47,7 @@ steps :
   - name : publish-snapshot-package
     depends_on :
       - build
-    image : docker-registry.ujar.org/ujar/maven:3-openjdk-17-slim
+    image : docker-registry.c2a2.com/ujar/maven:3-openjdk-17-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -69,7 +69,7 @@ steps :
   - name : publish-release-package
     depends_on :
       - build
-    image : docker-registry.ujar.org/ujar/maven:3-openjdk-17-slim
+    image : docker-registry.c2a2.com/ujar/maven:3-openjdk-17-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -96,8 +96,8 @@ steps :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : docker-registry.ujar.org/ujar/basics-amqp-consuming-hello
-      registry : docker-registry.ujar.org
+      repo : docker-registry.c2a2.com/ujar/basics-amqp-consuming-hello
+      registry : docker-registry.c2a2.com
       tags :
         - latest
     when :
