--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.ujar.basics.amqp</groupId>
-    <artifactId>amqp-consuming-hello</artifactId>
+    <groupId>org.ujar.bs.msg.amqp</groupId>
+    <artifactId>bs-msg-amqp-consuming-hello</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>basics-amqp-consuming-hello</name>
+    <name>bs-msg-amqp-consuming-hello</name>
     <description>Sample of AMQP producer app.</description>
     <licenses>
         <license>
@@ -32,7 +32,7 @@
     </developers>
 
     <scm>
-        <connection>scm:git:https://github.com/ujar-org/basics-amqp-consuming-hello.git</connection>
+        <connection>scm:git:https://github.com/ujar-org/bs-msg-amqp-consuming-hello.git</connection>
         <tag>HEAD</tag>
     </scm>
 
@@ -48,7 +48,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <sonar.exclusions>**/*Application.java</sonar.exclusions>
         <sonar.coverage.exclusions>**/*Config*.java,**/*Properties.java,**/*Test.java,**/Test*.java</sonar.coverage.exclusions>
-        <start-class>org.ujar.basics.amqp.consuming.hello.AmqpConsumingHelloApplication</start-class>
+        <start-class>org.ujar.bs.msg.amqp.consuming.hello.AmqpConsumingHelloApplication</start-class>
     </properties>
 
     <dependencies>
