chore: use pipelines.yml to define steps
Signed-off-by: Dima Denisenko <1253839+dmitriidenisenko@users.noreply.github.com>

--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -89,7 +89,7 @@ steps :
       - publish-snapshot-package
     image : plugins/docker
     settings :
-      dockerfile : Dockerfile
+      dockerfile : .drone/c2a2/Dockerfile
       context : ./
       storage_driver : vfs
       username :
