chore: make steps more self-explanatory
Signed-off-by: Dima Denisenko <1253839+dmitriidenisenko@users.noreply.github.com>

--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -101,6 +101,26 @@ steps :
           - feature/*
           - develop
 
+  - name : build-container-release-image
+    depends_on :
+      - publish-release-jar
+    image : plugins/docker
+    settings :
+      dockerfile : .drone/c2a2/Dockerfile
+      context : ./
+      storage_driver : vfs
+      username :
+        from_secret : DOCKER_USERNAME
+      password :
+        from_secret : DOCKER_PASSWORD
+      repo : docker-registry.c2a2.com/ujar/bs-msg-amqp-consuming-hello
+      registry : docker-registry.c2a2.com
+      tags :
+        - 0.1.0
+    when :
+      ref :
+        - refs/tags/*
+
 services :
   - name : rabbitmq
     image : rabbitmq:3.9-management-alpine
