chore: put DRONE_TAG env var value for Docker tag substitution

--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -116,7 +116,7 @@ steps :
       repo : docker-registry.c2a2.com/ujar/bs-msg-amqp-consuming-hello
       registry : docker-registry.c2a2.com
       tags :
-        - 0.1.0
+        - ${DRONE_TAG}
     when :
       ref :
         - refs/tags/*
