chore: create pipeline step for tagging release

--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -127,3 +127,37 @@ services :
     environment :
       RABBITMQ_DEFAULT_USER : sa_test
       RABBITMQ_DEFAULT_PASS : sa_test
+
+
+---
+
+kind : pipeline
+name : Prepare Release Tag
+type : docker
+trigger :
+  event :
+    - custom
+
+volumes :
+  - name : m2cache
+    host :
+      path : /app/.m2
+
+steps :
+  - name : create-release-tag
+    image : docker-registry.c2a2.com/ujar/maven:3-openjdk-17-slim
+    pull : always
+    volumes :
+      - name : m2cache
+        path : /root/.m2
+    commands :
+      - echo Prepare new release tag ${TAG}
+      - mkdir ${TAG}
+      - rmdir ${TAG}
+      - git remote set-url --push origin ${DRONE_GIT_SSH_URL}
+      - git checkout -b v${TAG}
+      - mvn versions:set -DremoveSnapshot
+      - git commit -a -m 'Prepare release ${TAG}'
+      - git tag ${TAG} && git push origin ${TAG}
+      - git tag -d ${TAG} && git checkout ${DRONE_COMMIT_BRANCH} && git branch -D v${TAG}
+      - echo Release ${TAG} created successfully.
