--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -132,7 +132,7 @@ services :
 ---
 
 kind : pipeline
-name : Prepare Release Tag
+name : CreateReleaseManually
 type : docker
 trigger :
   event :
