--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@
 version : '3.8'
 services :
   rabbitmq :
-    container_name : bs-msg-amqp-dev-consuming-hello-rabbitmq
+    container_name : quickstart-amqp-dev-consuming-hello-rabbitmq
     image : rabbitmq:3.9-management-alpine
     restart : unless-stopped
     environment :
@@ -14,24 +14,24 @@ services :
       # HTTP management UI
       - '15672:15672'
   prometheus :
-    container_name : bs-msg-amqp-dev-consuming-hello-prometheus
-    image : prom/prometheus:v2.37.1
+    container_name : quickstart-amqp-dev-consuming-hello-prometheus
+    image : prom/prometheus:v2.42.0
     volumes :
-      - ./docker/prometheus/:/etc/prometheus/
+      - ./src/main/docker/prometheus/:/etc/prometheus/
     command :
       - '--config.file=/etc/prometheus/prometheus.yml'
-    # On MacOS, remove next line and replace localhost by host.docker.internal in docker/prometheus/prometheus.yml and
+    # On MacOS, remove next line and replace localhost by host.docker.internal in src/main/docker/prometheus/prometheus.yml and
     # docker/grafana/provisioning/datasources/datasource.yml
     network_mode : 'host' # to test locally running service
   grafana :
-    container_name : bs-msg-amqp-dev-consuming-hello-grafana
-    image : grafana/grafana:8.5.13
+    container_name : quickstart-amqp-dev-consuming-hello-grafana
+    image : grafana/grafana:9.3.6
     volumes :
-      - ./docker/grafana/provisioning/:/etc/grafana/provisioning/
+      - ./src/main/docker/grafana/provisioning/:/etc/grafana/provisioning/
     environment :
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_INSTALL_PLUGINS=grafana-piechart-panel
-    # On MacOS, remove next line and replace localhost by host.docker.internal in docker/prometheus/prometheus.yml and
+    # On MacOS, remove next line and replace localhost by host.docker.internal in src/main/docker/prometheus/prometheus.yml and
     # docker/grafana/provisioning/datasources/datasource.yml
     network_mode : 'host' # to test locally running service
