--- a/.drone/c2a2/pipelines.yml
+++ b/.drone/c2a2/pipelines.yml
@@ -1,5 +1,5 @@
 kind : pipeline
-name : CI
+name : CodeVerification
 type : docker
 
 trigger :
@@ -11,10 +11,11 @@ volumes :
   - name : m2cache
     host :
       path : /app/.m2
+
 steps :
 
-  - name : build
-    image : docker-registry.c2a2.com/ujar/svc-builder:openjdk-19-slim
+  - name : code-coverage-gate
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -25,25 +26,13 @@ steps :
         from_secret : DEPLOYER_USERNAME
       DEPLOYER_PASSWORD :
         from_secret : DEPLOYER_PASSWORD
-      SONAR_HOST :
-        from_secret : SONAR_HOST
-      SONAR_TOKEN :
-        from_secret : SONAR_TOKEN
     commands :
-      - mvn clean compile test-compile --batch-mode -Dstyle.color=always --file pom.xml -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-      - mvn pmd:check --batch-mode -Dstyle.color=always --file pom.xml -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-      - mvn -Dstyle.color=always com.github.spotbugs:spotbugs-maven-plugin:4.7.3.0:check -Dspotbugs.xmlOutput=true -Dspotbugs.failOnError=true -Dspotbugs.excludeFilterFile=../spotbugs-exclude.xml -Dspotbugs.includeTests=true  --file pom.xml -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-      - mvn -Dstyle.color=always org.jacoco:jacoco-maven-plugin:prepare-agent verify org.jacoco:jacoco-maven-plugin:report sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=org.ujar:quickstart-amqp-consuming-hello -Dsonar.projectName=org.ujar:quickstart-amqp-consuming-hello --batch-mode --file pom.xml -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-      - mvn package -Dstyle.color=always -DskipTests -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true --batch-mode --file pom.xml -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-    when :
-      event :
-        - push
-        - tag
+      - mvn clean verify -Dstyle.color=always -Dmaven.javadoc.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
 
-  - name : publish-snapshot-jar
+  - name : static-analysis-gate
     depends_on :
-      - build
-    image : docker-registry.c2a2.com/ujar/svc-builder:openjdk-19-slim
+      - code-coverage-gate
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -53,8 +42,60 @@ steps :
         from_secret : DEPLOYER_USERNAME
       DEPLOYER_PASSWORD :
         from_secret : DEPLOYER_PASSWORD
+      SONAR_HOST :
+        from_secret : SONAR_HOST
+      SONAR_TOKEN :
+        from_secret : SONAR_TOKEN
     commands :
-      - mvn deploy -DskipTests -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=ujar-snapshots-repository::default::https://nexus.c2a2.com/repository/maven-snapshots
+      - mvn org.apache.maven.plugins:maven-dependency-plugin:3.3.0:copy-dependencies -Dmdep.prependGroupId=true -Dstyle.color=always -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
+      - mvn sonar:sonar '-Dsonar.java.libraries=target/dependency/*.jar' '-Dsonar.java.test.libraries=target/classes,target/dependency/*.jar' -Dsonar.qualitygate.wait=true -Dsonar.qualitygate.timeout=300 -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=${DRONE_REPO_OWNER}:${DRONE_REPO_NAME} -Dsonar.projectName=${DRONE_REPO_OWNER}:${DRONE_REPO_NAME} -Dstyle.color=always -Dmaven.javadoc.skip=true --batch-mode -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
+      - mvn pmd:check --batch-mode -Dstyle.color=always -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
+      - mvn com.github.spotbugs:spotbugs-maven-plugin:4.7.3.0:check -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD  -Dspotbugs.xmlOutput=true -Dspotbugs.failOnError=true -Dspotbugs.excludeFilterFile=../spotbugs-exclude.xml -Dspotbugs.includeTests=true -Dstyle.color=always
+
+services :
+  - name : rabbitmq
+    image : rabbitmq:3.11-management-alpine
+    environment :
+      RABBITMQ_DEFAULT_USER : svc_testing
+      RABBITMQ_DEFAULT_PASS : svc_testing
+
+---
+
+kind : pipeline
+name : ArtifactsPublishing
+type : docker
+
+trigger :
+  event :
+    - push
+    - tag
+  ref :
+    - refs/heads/develop
+    - refs/heads/prerelease*
+    - refs/heads/*.*.x
+    - refs/tags/*
+
+depends_on :
+  - CodeVerification
+
+volumes :
+  - name : m2cache
+    host :
+      path : /app/.m2
+
+steps :
+  - name : publish-snapshot-jar
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
+    volumes :
+      - name : m2cache
+        path : /root/.m2
+    environment :
+      DEPLOYER_USERNAME :
+        from_secret : DEPLOYER_USERNAME
+      DEPLOYER_PASSWORD :
+        from_secret : DEPLOYER_PASSWORD
+    commands :
+      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=appfactory-snapshots-repository::https://nexus.c2a2.com/repository/maven-snapshots
     when :
       branch :
         include :
@@ -63,9 +104,7 @@ steps :
           - "*.*.x"
 
   - name : publish-release-jar
-    depends_on :
-      - build
-    image : docker-registry.c2a2.com/ujar/svc-builder:openjdk-19-slim
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -76,7 +115,7 @@ steps :
       DEPLOYER_PASSWORD :
         from_secret : DEPLOYER_PASSWORD
     commands :
-      - mvn deploy -DskipTests -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=ujar-releases-repository::default::https://nexus.c2a2.com/repository/maven-releases
+      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=appfactory-releases-repository::https://nexus.c2a2.com/repository/maven-releases
     when :
       ref :
         - "refs/tags/*"
@@ -95,19 +134,53 @@ steps :
     depends_on :
       - publish-release-jar
 
+---
+
+kind : pipeline
+name : DockerImagePublishing
+type : docker
+
+trigger :
+  event :
+    - push
+    - tag
+
+depends_on :
+  - ArtifactsPublishing
+
+volumes :
+  - name : m2cache
+    host :
+      path : /app/.m2
+
+steps :
+  - name : package-jar
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
+    pull : if-not-exists
+    volumes :
+      - name : m2cache
+        path : /root/.m2
+    environment :
+      DEPLOYER_USERNAME :
+        from_secret : DEPLOYER_USERNAME
+      DEPLOYER_PASSWORD :
+        from_secret : DEPLOYER_PASSWORD
+    commands :
+      - mvn package -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true --batch-mode -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
+
   - name : build-container-with-feature
     depends_on :
-      - build
+      - package-jar
     image : plugins/docker
     settings :
-      dockerfile : .drone/c2a2/Dockerfile
+      dockerfile : ./.drone/c2a2/Dockerfile
       context : ./
       storage_driver : vfs
       username :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : docker-registry.c2a2.com/ujar/quickstart-amqp-consuming-hello
+      repo : docker-registry.c2a2.com/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
       registry : docker-registry.c2a2.com
       force_tag : true
       build_args : BUILD_VERSION=${DRONE_COMMIT}
@@ -120,17 +193,17 @@ steps :
 
   - name : build-container-release-image
     depends_on :
-      - publish-release-jar
+      - package-jar
     image : plugins/docker
     settings :
-      dockerfile : .drone/c2a2/Dockerfile
+      dockerfile : ./.drone/c2a2/Dockerfile
       context : ./
       storage_driver : vfs
       username :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : docker-registry.c2a2.com/ujar/quickstart-amqp-consuming-hello
+      repo : docker-registry.c2a2.com/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
       registry : docker-registry.c2a2.com
       force_tag : true
       build_args : BUILD_VERSION=${DRONE_COMMIT}
@@ -141,19 +214,10 @@ steps :
       ref :
         - "refs/tags/*"
 
-
-services :
-  - name : rabbitmq
-    image : rabbitmq:3.9-management-alpine
-    environment :
-      RABBITMQ_DEFAULT_USER : sa_test
-      RABBITMQ_DEFAULT_PASS : sa_test
-
-
 ---
 
 kind : pipeline
-name : CreateReleaseManually
+name : ManualRelease
 type : docker
 trigger :
   event :
@@ -169,15 +233,14 @@ volumes :
 
 steps :
   - name : create-release-tag
-    image : docker-registry.c2a2.com/ujar/svc-builder:openjdk-19-slim
+    failure : ignore
+    image : docker-registry.c2a2.com/svc-builder:openjdk-19-slim
     pull : if-not-exists
     volumes :
       - name : m2cache
         path : /root/.m2
     commands :
       - echo Prepare new version ${RELEASE_VERSION}
-      - mkdir ${RELEASE_VERSION}
-      - rmdir ${RELEASE_VERSION}
       - export NEXT_SNAPSHOT=${SNAPSHOT_VERSION}-SNAPSHOT
       - export GIT_AUTHOR_NAME=$${SVC_BUILD_GIT_USERNAME}
       - export GIT_AUTHOR_EMAIL=$${SVC_BUILD_GIT_EMAIL}
