chore: enable reasonable defaults for observability components

--- a/.drone/pipelines.yml
+++ b/.drone/pipelines.yml
@@ -15,7 +15,7 @@ volumes :
 steps :
 
   - name : code-coverage-gate
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -35,7 +35,7 @@ steps :
   - name : static-analysis-gate
     depends_on :
       - code-coverage-gate
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -51,10 +51,10 @@ steps :
       SONAR_TOKEN :
         from_secret : SONAR_TOKEN
     commands :
-      - mvn org.apache.maven.plugins:maven-dependency-plugin:3.3.0:copy-dependencies -Dmdep.prependGroupId=true -Dstyle.color=always -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
+      - mvn org.apache.maven.plugins:maven-dependency-plugin:3.5.0:copy-dependencies -Dmdep.prependGroupId=true -Dstyle.color=always -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
       - mvn sonar:sonar '-Dsonar.java.libraries=target/dependency/*.jar' '-Dsonar.java.test.libraries=target/classes,target/dependency/*.jar' -Dsonar.qualitygate.wait=true -Dsonar.qualitygate.timeout=300 -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=${DRONE_REPO_OWNER}:${DRONE_REPO_NAME} -Dsonar.projectName=${DRONE_REPO_OWNER}:${DRONE_REPO_NAME} -Dstyle.color=always -Dmaven.javadoc.skip=true --batch-mode -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
       - mvn pmd:check --batch-mode -Dstyle.color=always -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD
-      - mvn com.github.spotbugs:spotbugs-maven-plugin:4.7.3.0:check -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD  -Dspotbugs.xmlOutput=true -Dspotbugs.failOnError=true -Dspotbugs.excludeFilterFile=../spotbugs-exclude.xml -Dspotbugs.includeTests=true -Dstyle.color=always
+      - mvn com.github.spotbugs:spotbugs-maven-plugin:4.7.3.4:check -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD  -Dspotbugs.xmlOutput=true -Dspotbugs.failOnError=true -Dspotbugs.excludeFilterFile=../spotbugs-exclude.xml -Dspotbugs.includeTests=true -Dstyle.color=always
 
 services :
   - name : rabbitmq
@@ -89,7 +89,7 @@ volumes :
 
 steps :
   - name : publish-snapshot-jar
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     volumes :
       - name : m2cache
         path : /root/.m2
@@ -100,7 +100,7 @@ steps :
       DEPLOYER_PASSWORD :
         from_secret : DEPLOYER_PASSWORD
     commands :
-      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=manufacturing-snapshots-repository::https://nexus.continuousdelivery.store/repository/maven-snapshots
+      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=kh-contrib-snapshots-repo::https://know-how.nexus/repository/maven-snapshots
     when :
       branch :
         include :
@@ -109,7 +109,7 @@ steps :
           - "*.*.x"
 
   - name : publish-release-jar
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -121,7 +121,7 @@ steps :
       DEPLOYER_PASSWORD :
         from_secret : DEPLOYER_PASSWORD
     commands :
-      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=manufacturing-releases-repository::https://nexus.continuousdelivery.store/repository/maven-releases
+      - mvn deploy -Dstyle.color=always -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -Dcheckstyle.skip=true -s ../maven-settings.xml -Ddeployer.username=$DEPLOYER_USERNAME -Ddeployer.password=$DEPLOYER_PASSWORD -DaltDeploymentRepository=kh-contrib-releases-repo::https://know-how.nexus/repository/maven-releases
     when :
       ref :
         - "refs/tags/*"
@@ -161,7 +161,7 @@ volumes :
 
 steps :
   - name : package-jar
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -187,15 +187,14 @@ steps :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : docker-registry.continuousdelivery.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
-      registry : docker-registry.continuousdelivery.store
+      repo : know-how.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
+      registry : know-how.store
       force_tag : true
       build_args :
-        - BASE_IMAGE=docker-registry.c2a2.com/jre:ibm-semeru-runtimes-open-17-jre-focal
+        - BASE_IMAGE=know-how.store/jre:ibm-semeru-runtimes-open-17-jre-focal
         - BUILD_VERSION=${DRONE_COMMIT}
       tags :
-        - ${DRONE_BRANCH:22}
-        - ${DRONE_COMMIT}
+        - ${DRONE_BRANCH:22}-${CI_BUILD_NUMBER}
     when :
       branch :
         include :
@@ -213,11 +212,11 @@ steps :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : docker-registry.continuousdelivery.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
-      registry : docker-registry.continuousdelivery.store
+      repo : know-how.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
+      registry : know-how.store
       force_tag : true
       build_args :
-        - BASE_IMAGE=docker-registry.c2a2.com/jre:ibm-semeru-runtimes-open-17-jre-focal
+        - BASE_IMAGE=know-how.store/jre:ibm-semeru-runtimes-open-17-jre-focal
         - BUILD_VERSION=${DRONE_COMMIT}
       tags :
         - ${DRONE_TAG}
@@ -241,15 +240,15 @@ trigger :
 
 steps :
   - name : deploy
-    failure : ignore
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
-      SVC_CHARTS_REPOSITORY :
-        from_secret : SVC_CHARTS_REPOSITORY
+      HELM_CHARTS_REPOSITORY :
+        from_secret : HELM_CHARTS_REPOSITORY
     commands :
-      - git clone $${SVC_CHARTS_REPOSITORY} charts && cd charts
-      - helm install ${DRONE_REPO_NAME} ./${DRONE_REPO_NAME} --values ./${DRONE_REPO_NAME}/${DRONE_DEPLOY_TO}-values.yaml --set image.tag=${DRONE_COMMIT} -n ${DRONE_DEPLOY_TO}-environment
+      - git clone $${HELM_CHARTS_REPOSITORY} charts && cd charts/${DRONE_REPO_NAME}
+      - kubectl version --output=yaml
+      - helm upgrade --install --atomic --wait --timeout 2m ${DRONE_REPO_NAME} ./ --values ./values.yaml --values ./${DRONE_DEPLOY_TO}-values.yaml --set image.tag=${DRONE_BRANCH:22}-${CI_PARENT_BUILD_NUMBER} -n ${DRONE_DEPLOY_TO}-env
 
 ---
 
@@ -266,15 +265,14 @@ trigger :
 
 steps :
   - name : rollback
-    failure : ignore
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
-      SVC_CHARTS_REPOSITORY :
-        from_secret : SVC_CHARTS_REPOSITORY
+      HELM_CHARTS_REPOSITORY :
+        from_secret : HELM_CHARTS_REPOSITORY
     commands :
-      - git clone $${SVC_CHARTS_REPOSITORY} charts && cd charts
-      - helm uninstall ${DRONE_REPO_NAME} -n ${DRONE_DEPLOY_TO}-environment
+      - git clone $${HELM_CHARTS_REPOSITORY} charts && cd charts/${DRONE_REPO_NAME}
+      - helm uninstall --wait --timeout 2m ${DRONE_REPO_NAME} -n ${DRONE_DEPLOY_TO}-env
 
 ---
 
@@ -292,15 +290,15 @@ trigger :
 
 steps :
   - name : deploy
-    failure : ignore
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
-      SVC_CHARTS_REPOSITORY :
-        from_secret : SVC_CHARTS_REPOSITORY
+      HELM_CHARTS_REPOSITORY :
+        from_secret : HELM_CHARTS_REPOSITORY
     commands :
-      - git clone $${SVC_CHARTS_REPOSITORY} charts && cd charts
-      - helm install ${DRONE_REPO_NAME} ./${DRONE_REPO_NAME} --values ./${DRONE_REPO_NAME}/${DRONE_DEPLOY_TO}-values.yaml --set image.tag=${DRONE_TAG} -n ${DRONE_DEPLOY_TO}-environment
+      - git clone $${HELM_CHARTS_REPOSITORY} charts && cd charts/${DRONE_REPO_NAME}
+      - kubectl version --output=yaml
+      - helm upgrade --install --atomic --wait --timeout 2m ${DRONE_REPO_NAME} ./ --values ./values.yaml --values ./${DRONE_DEPLOY_TO}-values.yaml --set image.tag=${DRONE_TAG} -n ${DRONE_DEPLOY_TO}-env
 
 ---
 
@@ -318,15 +316,14 @@ trigger :
 
 steps :
   - name : rollback
-    failure : ignore
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
-      SVC_CHARTS_REPOSITORY :
-        from_secret : SVC_CHARTS_REPOSITORY
+      HELM_CHARTS_REPOSITORY :
+        from_secret : HELM_CHARTS_REPOSITORY
     commands :
-      - git clone $${SVC_CHARTS_REPOSITORY} charts && cd charts
-      - helm uninstall ${DRONE_REPO_NAME} -n ${DRONE_DEPLOY_TO}-environment
+      - git clone $${HELM_CHARTS_REPOSITORY} charts && cd charts/${DRONE_REPO_NAME}
+      - helm uninstall --wait --timeout 2m ${DRONE_REPO_NAME} -n ${DRONE_DEPLOY_TO}-env
 
 ---
 
@@ -348,7 +345,7 @@ volumes :
 steps :
   - name : create-release-tag
     failure : ignore
-    image : docker-registry.continuousdelivery.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
