chore: point to know-how.download registry

--- a/.drone/pipelines.yml
+++ b/.drone/pipelines.yml
@@ -15,7 +15,7 @@ volumes :
 steps :
 
   - name : code-coverage-gate
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -35,7 +35,7 @@ steps :
   - name : static-analysis-gate
     depends_on :
       - code-coverage-gate
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -105,7 +105,7 @@ volumes :
 
 steps :
   - name : publish-snapshot-jar
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     volumes :
       - name : m2cache
         path : /root/.m2
@@ -125,7 +125,7 @@ steps :
           - "*.*.x"
 
   - name : publish-release-jar
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -197,7 +197,7 @@ volumes :
 
 steps :
   - name : package-jar
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
@@ -223,11 +223,11 @@ steps :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : know-how.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
-      registry : know-how.store
+      repo : know-how.download/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
+      registry : know-how.download
       force_tag : true
       build_args :
-        - BASE_IMAGE=know-how.store/jre:ibm-semeru-runtimes-open-17-jre-focal
+        - BASE_IMAGE=know-how.download/jre:ibm-semeru-runtimes-open-17-jre-focal
         - BUILD_VERSION=${DRONE_COMMIT}
       tags :
         - ${DRONE_BRANCH:22}-${CI_BUILD_NUMBER}
@@ -248,11 +248,11 @@ steps :
         from_secret : DOCKER_USERNAME
       password :
         from_secret : DOCKER_PASSWORD
-      repo : know-how.store/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
-      registry : know-how.store
+      repo : know-how.download/${DRONE_REPO_OWNER}/quickstart-amqp-consuming-hello
+      registry : know-how.download
       force_tag : true
       build_args :
-        - BASE_IMAGE=know-how.store/jre:ibm-semeru-runtimes-open-17-jre-focal
+        - BASE_IMAGE=know-how.download/jre:ibm-semeru-runtimes-open-17-jre-focal
         - BUILD_VERSION=${DRONE_COMMIT}
       tags :
         - ${DRONE_TAG}
@@ -276,7 +276,7 @@ trigger :
 
 steps :
   - name : deploy
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
       HELM_CHARTS_REPOSITORY :
@@ -320,7 +320,7 @@ trigger :
 
 steps :
   - name : rollback
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
       HELM_CHARTS_REPOSITORY :
@@ -345,7 +345,7 @@ trigger :
 
 steps :
   - name : deploy
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
       HELM_CHARTS_REPOSITORY :
@@ -391,7 +391,7 @@ trigger :
 
 steps :
   - name : rollback
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     environment :
       HELM_CHARTS_REPOSITORY :
@@ -420,7 +420,7 @@ volumes :
 steps :
   - name : create-release-tag
     failure : ignore
-    image : know-how.store/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
+    image : know-how.download/svc-builder:ibm-semeru-runtimes-open-17-jdk-focal
     pull : if-not-exists
     volumes :
       - name : m2cache
