chore: migrate to dev.knowhowto group
Signed-off-by: Dima Denisenko <1253839+dmitriidenisenko@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "quickstart-amqp-consuming-hello",
+    "name": "@know-how-spring-boot/quickstart-amqp-consuming-hello",
     "version": "23.0.0",
     "description": "Provide an optional Git commit hooks.",
     "private": true,
