--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>24.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>quickstart-amqp-consuming-hello</name>
+    <name>amqp-consuming-hello</name>
     <description>Sample AMQP producer app.</description>
     <licenses>
         <license>
